# create-ekka-desktop-app

./: README.md  package.json
settings-test/: .gitignore  .npmrc  BRANDING.md  README.md  eslint.config.js  package.json  tsconfig.json  vite.config.ts
settings-test/branding/: app.json
settings-test/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
settings-test/src-tauri/src/: main.rs
settings-test/src/app/: App.tsx
settings-test/src/demo/: DemoApp.tsx  Settings.tsx
settings-test/src/ekka/: README.md  demo-backend.ts  errors.ts  index.ts
template/: .gitignore  app.config.json  eslint.config.js  index.html  package-lock.json  package.json
template/branding/: icon.icns
template/src/: main.tsx  vite-env.d.ts
template/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
template/src-tauri/capabilities/: default.json
template/src-tauri/crates/ekka-desktop-core/: Cargo.toml  build.rs
template/src-tauri/crates/ekka-desktop-core/src/: bootstrap.rs  config.rs  device_secret.rs  main.rs  node_credentials.rs  node_vault_crypto.rs  node_vault_store.rs  security_epoch.rs
template/src-tauri/resources/: ekka-engine-bootstrap
template/src-tauri/src/: bootstrap.rs  commands.rs  config.rs  core_process.rs  device_secret.rs  engine_process.rs  grants.rs  main.rs  node_auth.rs  node_credentials.rs  node_runner.rs  node_vault_crypto.rs  node_vault_store.rs  security_epoch.rs  state.rs  types.rs  updater.rs
template/src-tauri/src/handlers/: home.rs  mod.rs  paths.rs  vault.rs
template/src-tauri/src/ops/: auth.rs  home.rs  mod.rs  runtime.rs
template/src/demo/: DemoApp.tsx  Settings.tsx
template/src/demo/components/: Banner.tsx  EmptyState.tsx  InfoPopover.tsx  InfoTooltip.tsx  LearnMore.tsx  NodeCredentialsOnboarding.tsx  SetupWizard.tsx  StatusBadge.tsx  index.ts
template/src/demo/hooks/: index.ts  useAuditEvents.ts
template/src/demo/layout/: Shell.tsx  Sidebar.tsx
template/src/demo/pages/: AuditLogPage.tsx  DocGenPage.tsx  ExecutionPlansPage.tsx  ExecutionRunDetailPage.tsx  HomeSetupPage.tsx  LoginPage.tsx  PathPermissionsPage.tsx  RunnerPage.tsx  SystemPage.tsx  VaultPage.tsx
template/src/ekka/: api.ts  client.ts  config.ts  constants.ts  errors.ts  index.ts  session.ts  types.ts
template/src/ekka/__tests__/: demo-backend.test.ts
template/src/ekka/api/: engine.ts  http.ts
template/src/ekka/audit/: index.ts  store.ts  types.ts
template/src/ekka/auth/: client.ts  index.ts  storage.ts  types.ts
template/src/ekka/backend/: demo.ts
template/src/ekka/internal/: backend.ts  index.ts
template/src/ekka/ops/: auth.ts  debug.ts  home.ts  index.ts  nodeCredentials.ts  nodeSession.ts  paths.ts  runner.ts  runtime.ts  setup.ts  vault.ts  workflowRuns.ts
template/src/ekka/utils/: idempotency.ts  index.ts  time.ts
