[package]
name = "ekka-desktop-app"
version = "0.2.0"
description = "EKKA Desktop Application"
authors = ["EKKA"]
edition = "2021"

# Prevent inheriting parent workspace
[workspace]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
