[package]
name = "ekka-desktop-app"
version = "0.2.0"
description = "EKKA Desktop Application"
authors = ["EKKA"]
edition = "2021"

# Prevent inheriting parent workspace
[workspace]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
ekka-sdk-core = { path = "../../ekka-execution-node-sdk-rust/crates/framework/ekka-sdk-core" }
ekka-runner-core = { path = "../../ekka-execution-node-sdk-rust/crates/framework/ekka-runner-core" }
ekka-runner-local = { path = "../../ekka-execution-node-sdk-rust/crates/apps/ekka-runner-local" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
http = "1"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
zeroize = { version = "1.7", features = ["derive"] }
dotenvy = "0.15"
hex = "0.4"
anyhow = "1.0"
regex = "1"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
